--- a/src/data_manipulations/illuminant_eda.ipynb
+++ b/src/data_manipulations/illuminant_eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,9 +21,24 @@
     "from sklearn.metrics import silhouette_score\n",
     "import warnings\n",
     "import glob\n",
+    "import os\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "plt.rcParams[\"figure.figsize\"] = (14, 10)\n",
+    "\n",
+    "# ========== PATH CONFIGURATION ==========\n",
+    "# Get project root (three levels up from src/data_manipulations/)\n",
+    "# In Jupyter notebooks, we calculate from current working directory\n",
+    "current_dir = os.path.abspath(os.getcwd())\n",
+    "if 'data_manipulations' in current_dir:\n",
+    "    # If we're in the data_manipulations directory, go up 3 levels\n",
+    "    PROJECT_ROOT = os.path.dirname(os.path.dirname(os.path.dirname(current_dir)))\n",
+    "elif 'src' in current_dir:\n",
+    "    # If we're in src, go up 1 level\n",
+    "    PROJECT_ROOT = os.path.dirname(current_dir)\n",
+    "else:\n",
+    "    # Assume running from project root\n",
+    "    PROJECT_ROOT = current_dir\n",
     "\n",
     "# ========== GLOBAL SETTINGS ==========\n",
     "# Adjust these settings to control color display throughout the notebook\n",
@@ -38,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +194,8 @@
     "# Load Nikon_D810 data (.wp white point files)\n",
     "data_list = []\n",
     "\n",
-    "for wp_file in glob.glob(\"Data/Nikon_D810/**/*.wp\", recursive=True):\n",
+    "data_path = os.path.join(PROJECT_ROOT, \"Data\", \"Nikon_D810\")\n",
+    "for wp_file in glob.glob(os.path.join(data_path, \"**\", \"*.wp\"), recursive=True):\n",
     "    with open(wp_file, \"r\") as f:\n",
     "        line = f.read().strip()\n",
     "        values = line.replace(\"\\t\", \" \").split()\n",
@@ -994,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1030,22 +1046,16 @@
     "    cluster_centers_dict[class_name] = centroids[cluster_id].astype(np.float32)\n",
     "\n",
     "# Save to file\n",
-    "np.save(\"cluster_centers.npy\", cluster_centers_dict)\n",
+    "cluster_centers_path = os.path.join(PROJECT_ROOT, \"cluster_centers.npy\")\n",
+    "np.save(cluster_centers_path, cluster_centers_dict)\n",
     "\n",
     "print(\"=\"*80)\n",
-    "print(\"Saved cluster centers to cluster_centers.npy\")\n",
+    "print(f\"Saved cluster centers to {cluster_centers_path}\")\n",
     "print(\"=\"*80)\n",
     "for name, center in cluster_centers_dict.items():\n",
     "    print(f\"{name:12s}: [{center[0]:.4f}, {center[1]:.4f}, {center[2]:.4f}]\")\n",
     "print(\"=\"*80)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
